@@ -1,8 +1,11 @@
 New in version 0.9.3
 --------------------
 
-nose 0.9.3 is a bugfix release. Thanks to the users who reported bugs and
-submitted patches and suggestions.
+nose 0.9.3 is mainly a bugfix release. The one new feature is support for user
+configuration files: now you can put your frequently used configuration
+options in .noserc or nose.cfg files, rather than typing them over and over
+and over again. Many thanks to Antoine Pitrou for that patch, and thanks to
+the users who reported bugs and submitted patches and suggestions.
 
 Barring catastrophic bugs, this will be the last release of nose in the 0.9
 series. An alpha release of nose 0.10 should be forthcoming within a few
